Finished adding all answers to FAQ, as well as formatting the FAQ title.

--- a/EthosInc/Views/Home/About.cshtml
+++ b/EthosInc/Views/Home/About.cshtml
@@ -25,7 +25,8 @@
             <p style="font-size: 20px">&emsp;&emsp; Ethos Inc is a computer hardware distribution company active in the mainland United States of America, with over 2,500 employees 
                 and owning over a dozen storage facilities across the country. Its operations are based in the city of Jacksonville, Florida, where it was 
                 founded in December 2022 by three college students: Charles Williams, Logan Milbrandt, and Matthew Fernandez. The main service offered by 
-                Ethos Inc comes in the form of its online store, where customers can purchase computer hardware and have it shipped to them.</p>
+                Ethos Inc comes in the form of its online store, where customers can purchase computer hardware and have it shipped to them. If you have
+                questions or need help, please contact our support team at the phone number (999)999-9999 or the email support@ethosinc.com.</p>
         </div>
         <div>
             <p class="segment"><b>Executives</b></p>
