--- a/EthosInc/Views/Home/FAQ.cshtml
+++ b/EthosInc/Views/Home/FAQ.cshtml
@@ -8,11 +8,14 @@
 </head>
 <html>
     <body>
-        <div class="text-center">
-            <h1 class="display-4" style="font-size: 3rem !important;">Frequently Asked Questions</h1>
+        <div class="row align-items-center justify-content-center" style="background-color: #201c1c">
+            <p style="color: dimgrey; font-size: 60px; font-weight: bold;">&gt;</p>
+            <p style="color: white; font-size: 60px; font-weight: bold;">Frequently Asked Questions</p>
+            <p style="color: dimgrey; font-size: 60px; font-weight: bold;">&lt</p>
+        </div>
+        <div style="margin-top: 20px; text-align: center">
             <p>Click on any of the buttons to display the answer to their question.</p>
         </div>
-        
 
         @* FAQ Boxes *@
 
@@ -55,8 +58,8 @@
             <div class="collapse" id="question4">
                 <div class="card card-body answer">
                     <p>
-                    Please allow up to 30 days for your product to arrive. If 30 days passes, <b>contact our support team</b> using the phone
-                    number or email address listed in the about page, and have your order number ready so we can quickly resolve the issue.
+                    Please allow up to 30 days for your product to arrive. If 30 days passes, <b>contact our support team</b> using the phone number or email address 
+                    listed in the <a href="~/About" style="font-weight:bold">About</a> page, and have your order number ready so we can quickly resolve the issue.
                     </p>
                 </div>
             </div>
@@ -81,7 +84,8 @@
             <div class="collapse" id="question6">
                 <div class="card card-body answer">
                     <p>
-                        ...And this is an answer
+                        Our website does not require that users have an account before making a purchase. Instead of purchases being linked to an account, you are given an 
+                        Order ID upon making a purchase, which you can then use to view your ordered items.
                     </p>
                 </div>
             </div>
@@ -93,7 +97,8 @@
         <div class="collapse" id="question7">
             <div class="card card-body answer">
                 <p>
-                    ...And this is an answer
+                    There are many factors outside of our company's control that could delay a product from becoming available again. However, if you contact our support team, 
+                    you may be able to get an estimation of when the item will be back in stock.
                 </p>
             </div>
         </div>
@@ -105,9 +110,9 @@
         <div class="collapse" id="question8">
             <div class="card card-body answer">
                 <p>
-                    If a product was purchased from our website and is in need of repairs, contact our customer service. There they will instruct you on how to send
-                    us your item, where one of our technicians will determine if your item can be fixed and how long it will take. If your item is still under our warranty,
-                    repairs for the item are free! See our Repairs Policy under our “Policy” page for more.
+                    If a product was purchased from our website and is in need of repairs, contact our support team at the phone number or email listed in the <a href="~/About" style="font-weight:bold">About</a> page. 
+                    There they will instruct you on how to send us your item, where one of our technicians will determine if your item can be fixed and how long it will take. If your item is still under our warranty,
+                    repairs for the item are free! See our Repairs Policy under our <a href="~/Policy" style="font-weight:bold">Policy</a> page for more.
                 </p>
             </div>
         </div>
@@ -132,7 +137,7 @@
         <div class="collapse" id="question10">
             <div class="card card-body answer">
                 <p>
-                    We suggest visiting our About page to learn more about our company.
+                    We suggest visiting our <a href="~/About" style="font-weight:bold">About</a> page to learn more about our company.
                 </p>
             </div>
         </div>
