Finished Policy page and made minor change in wording in FAQ page.

--- a/EthosInc/Views/Home/FAQ.cshtml
+++ b/EthosInc/Views/Home/FAQ.cshtml
@@ -112,7 +112,7 @@
                 <p>
                     If a product was purchased from our website and is in need of repairs, contact our support team at the phone number or email listed in the <a href="~/About" style="font-weight:bold">About</a> page. 
                     There they will instruct you on how to send us your item, where one of our technicians will determine if your item can be fixed and how long it will take. If your item is still under our warranty,
-                    repairs for the item are free! See our Repairs Policy under our <a href="~/Policy" style="font-weight:bold">Policy</a> page for more.
+                    repairs for the item are free! See our Return of Merchandise Policy under our <a href="~/Policy" style="font-weight:bold">Policy</a> page for more.
                 </p>
             </div>
         </div>
