--- a/EthosInc/Views/Home/Policy.cshtml
+++ b/EthosInc/Views/Home/Policy.cshtml
@@ -4,8 +4,79 @@
 
 <!DOCTYPE html>
 <html>
-    <div class="text-center">
-        <h1 class="display-4">Business Policies</h1>
-        <p>This page will detail the business policies, including shipping policy, rates, tax policy, and return policy.</p>
-    </div>
+    <head>
+        <meta charset="utf-8" />
+        <link rel="stylesheet" type="text/css" href="~/css/policy.css" />
+    </head>
+    <body style="background-color: lightblue">
+        <div class="text-center" style="background-color: cyan">
+            <hr class="line-b" />
+            <h1 class="display-4" style=" font-weight: bold; color: blue">Business Policies</h1>
+            <hr class="line-b" />
+        </div>
+        <div style="background-color: white; border-radius: 10px">
+            <div style="background-color: darkturquoise">
+                <hr class="line-b" />
+                <p class="title">Product Cost Policy</p>
+                <hr class="line-t" />
+            </div>
+            <div>
+                <p style="padding: 8px">
+                    &emsp;&emsp; We offer price matching for any products you purchase from us, meaning you can get a partial refund on your purchases if you can show us the same 
+                    product being sold for a lower price by a competitor or if our price for the item had dropped within 30 days following your purchase. The refund is equal to the
+                    difference in prices for either scenario. Simply contact our support team at the phone number or email listed in the <a href="~/About" style="font-weight:bold">About</a> 
+                    page to initiate the price matching process.
+                </p>
+            </div>
+            <div style="background-color: darkturquoise">
+                <hr class="line-b" />
+                <p class="title">Shipping Policy</p>
+                <hr class="line-t" />
+            </div>
+            <div>
+                <p style="padding: 8px">
+                    &emsp;&emsp; We do our best to guarantee your order’s speedy delivery and integrity on receival. However, sometimes an order might not make it by its estimated time of delivery or
+                    might become damaged in its transit. If the former, no shipping fee is applied and you will receive up to a $10.00 refund on the order or 10% off on the order,
+                    whichever is higher. If the latter, see our Return of Merchandise Policy for how items lost or damaged in transit are handled.
+                </p>
+            </div>
+            <div style="background-color: darkturquoise">
+                <hr class="line-b" />
+                <p class="title">Shipping Rates Policy</p>
+                <hr class="line-t" />
+            </div>
+            <div>
+                <p style="padding: 8px">
+                    &emsp;&emsp; On orders below $25.00, a flat shipping fee of $3.00 is applied. Otherwise, shipping is free! However, an additional $3.00 fee is unavoidable if you select our “priority”
+                    shipping option when making your order, which ensures that your order will arrive within a 24 hour period following your purchase.
+                </p>
+            </div>
+            <div style="background-color: darkturquoise">
+                <hr class="line-b" />
+                <p class="title">Tax Policy</p>
+                <hr class="line-t" />
+            </div>
+            <div>
+                <p style="padding: 8px">
+                    &emsp;&emsp; Within the United States, orders made on our website receive a tax rate based on what state an order is being shipped to. Certain states do not require that Ethos Inc.
+                    collect sales tax, including California, Florida, New York, Texas, and several others. However, if you are in such a state, you will still have to pay your state’s
+                    appropriate sales tax when filing your state taxes.
+                </p>
+            </div>
+            <div style="background-color: darkturquoise">
+                <hr class="line-b" />
+                <p class="title">Return of Merchandise Policy</p>
+                <hr class="line-t" />
+            </div>
+            <div>
+                <p style="padding: 8px">
+                    &emsp;&emsp; Products sold on our website are typically covered by both our return and repair policies, as well as that of the product manufacturer’s own warranty policy. Our return
+                    policy applies up until 30 days after the product’s delivery, so a return can be made up until then with a 50% refund on the product. Our repair policy also applies
+                    within these first 30 days, where repairs are free up until then, having a variable price following this period. If you never received your product or it was received
+                    in a damaged or non-functional condition, then a missing/damaged claim can be made for the item up until 15 days after the product’s delivery date, where you will
+                    receive a total refund for the product.
+                </p>
+            </div>
+        </div>
+    </body>
 </html>
