--- a/EthosInc/Views/Cart/Index.cshtml
+++ b/EthosInc/Views/Cart/Index.cshtml
@@ -6,13 +6,13 @@
 <html>
     @model CartIndexViewModel
 
-    <h2>Your cart</h2>
+    <h2>Your Cart</h2>
 
     <table class="table table-bordered table-striped">
         <thead>
             <tr>
                 <th class="text-center">Quantity</th>
-                <th>Item</th>
+                <th class="text-right">Item</th>
                 <th class="text-right">Price</th>
                 <th class="text-right">Subtotal</th>
             </tr>
@@ -49,7 +49,14 @@
     </table>
 
     <div class="text-center">
-        <a class="btn btn-primary" href="@Model.ReturnUrl">Continue Shopping</a>
+        @if (Model.Cart.ComputeTotalValue() == 0)
+        {
+            <a class="btn btn-secondary" href="/Shop" style="color: #fff;">Continue Shopping</a>
+        }
+        else
+        {
+            <a class="btn btn-primary" href="@Model.ReturnUrl">Continue Shopping</a>
+        }
         <a class="btn btn-primary" asp-action="Checkout" asp-controller="Order">Checkout</a>
     </div>
 </html>
