--- a/EthosInc/Views/Home/Login.cshtml
+++ b/EthosInc/Views/Home/Login.cshtml
@@ -1,15 +1,15 @@
 ﻿@{
     ViewData["Title"] = "Login";
 }
-<h1>@ViewData["Title"]</h1>
 
 <!DOCTYPE html>
 <html>
+    <h1>Login</h1>
+    <div class="text-danger" asp-validation-summary="All"></div>
     <div class="text-center">
-        <p>To view your ordered items, enter the code provided from your order into this box:</p>
+        <p>To view your ordered items, enter the ID provided from your order.</p>
         <form>
             <div class="form-group">
-                <!--<label for="exampleInputPassword1">Order ID</label>-->
                 <input type="password" class="form-control" id="orderID" placeholder="Order ID">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
