--- a/EthosInc/Views/Order/Checkout.cshtml
+++ b/EthosInc/Views/Order/Checkout.cshtml
@@ -1,44 +1,59 @@
-﻿@model Order
+﻿@{
+    ViewData["Title"] = "Check Out";
+}
 
-<h2>Check out now</h2>
-<p>Please enter your details, and we'll ship your goods right away!</p>
 
-<div asp-validation-summary="All" class="text-danger"></div>
+@model Order
+<html>
+    <body>
+        <div class="text-cetner">
+            <h2>Check out now</h2>
+            <p style="text-decoration: underline;">Please enter your details, and we'll ship your goods right away!</p>
+            <p>Note: <span style="color: red;">*</span> means that the field is required.</p>
+        </div>
 
-<form asp-action="Checkout" method="post">
-    <h3>Ship to</h3>
-    <div class="form-group">
-        <label>Name:</label><input asp-for="Name" class="form-control" />
-    </div>
-    <h3>Address</h3>
-    <div class="form-group">
-        <label>Line 1:</label><input asp-for="Line1" class="form-control" />
-    </div>
-    <div class="form-group">
-        <label>Line 2:</label><input asp-for="Line2" class="form-control" />
-    </div>
-    <div class="form-group">
-        <label>Line 3:</label><input asp-for="Line3" class="form-control" />
-    </div>
-    <div class="form-group">
-        <label>City:</label><input asp-for="City" class="form-control" />
-    </div>
-    <div class="form-group">
-        <label>State:</label><input asp-for="State" class="form-control" />
-    </div>
-    <div class="form-group">
-        <label>Zip:</label><input asp-for="Zip" class="form-control" />
-    </div>
-    <div class="form-group">
-        <label>Country:</label><input asp-for="Country" class="form-control" />
-    </div>
-    <h3>Options</h3>
-    <div class="checkbox">
-        <label>
-            <input asp-for="GiftWrap" /> Gift wrap these items
-        </label>
-    </div>
-    <div class="text-center">
-        <input class="btn btn-primary" type="submit" value="Complete Order" />
-    </div>
-</form>
+        <div>
+            <div asp-validation-summary="All" class="text-danger"></div>
+
+            <form asp-action="Checkout" method="post">
+                <h3>Shipping</h3>
+                <div class="form-group">
+                    <label>Name<span style="color:red">*</span>:</label><input asp-for="Name" class="form-control" />
+                </div>
+                <br/>
+                <h3>Address</h3>
+                <div class="form-group">
+                    <label>Line 1<span style="color:red">*</span>:</label><input asp-for="Line1" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label>Line 2:</label><input asp-for="Line2" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label>Line 3:</label><input asp-for="Line3" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label>City<span style="color:red">*</span>:</label><input asp-for="City" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label>State<span style="color:red">*</span>:</label><input asp-for="State" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label>Zip<span style="color:red">*</span>:</label><input asp-for="Zip" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label>Country<span style="color:red">*</span>:</label><input asp-for="Country" class="form-control" />
+                </div>
+                <br/>
+                <h3>Options</h3>
+                <div class="checkbox">
+                    <label>
+                        <input asp-for="GiftWrap" /> Gift wrap these items
+                    </label>
+                </div>
+                <div class="text-center">
+                    <input class="btn btn-primary" type="submit" value="Complete Order" />
+                </div>
+            </form>
+        </div>
+    </body>
+</html>
